fixing bullet point alignment for real this time

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ p{
 }
 ul{
     text-align: center;
+    list-style-position: inside;
 }
 h1, h2, h3 {
     color: rgb(39, 11, 86);
